syntax = "proto3";

import "google/protobuf/empty.proto";

package generator;

service Generator {
  // Start Generating stream of sensor
  rpc Start(StartSpec) returns (google.protobuf.Empty) {}

  // Stop Generating stream of sensor
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message StartSpec {
    sfixed32 num_of_message_per_second = 1;
}